CREATE TABLE DBA.AGRUPAMENTO_CUSTO_TIPO (
    IDAGRUPAMENTOTIPO	INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1 INCREMENT BY 1),
    DESCRICAO          	VARCHAR(50) NOT NULL,
    SIGLA               VARCHAR(10) NOT NULL,
    CONSTRAINT PK_AGRUPAMENTO_CUSTO_TIPO PRIMARY KEY (IDAGRUPAMENTOTIPO),
    CONSTRAINT UK_AGRUPAMENTO_CUSTO_TIPO_SIGLA UNIQUE (SIGLA)
)
GO
CREATE TABLE DBA.AGRUPAMENTO_CUSTO (
    IDAGRUPAMENTOCUSTO	INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1 INCREMENT BY 1),
    DESCRICAO           VARCHAR(100) NOT NULL,
    TIPOAGRUPAMENTO     INTEGER NOT NULL,
    CONSTRAINT PK_AGRUPAMENTO_CUSTO PRIMARY KEY (IDAGRUPAMENTOCUSTO),
    CONSTRAINT FK_AGRUPAMENTO_CUSTO_TIPO FOREIGN KEY (TIPOAGRUPAMENTO) REFERENCES DBA.AGRUPAMENTO_CUSTO_TIPO (IDAGRUPAMENTOTIPO)
)
GO
CREATE TABLE DBA.AGRUPAMENTO_CUSTO_EMPRESA (
    IDAGRUPAMENTOCUSTOEMPRESA	INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1 INCREMENT BY 1),
    IDEMPRESA                   INTEGER NOT NULL,
    IDAGRUPAMENTOCUSTO          INTEGER NOT NULL,
    CONSTRAINT PK_AGRUPAMENTO_CUSTO_EMPRESA PRIMARY KEY (IDAGRUPAMENTOCUSTOEMPRESA),
    CONSTRAINT FK_AGR_CUSTO_EMPRESA_AGRUP FOREIGN KEY (IDAGRUPAMENTOCUSTO) REFERENCES DBA.AGRUPAMENTO_CUSTO (IDAGRUPAMENTOCUSTO),
    CONSTRAINT UK_AGR_CUSTO_EMPRESA UNIQUE (IDEMPRESA, IDAGRUPAMENTOCUSTO)
)
GO
INSERT INTO DBA.AGRUPAMENTO_CUSTO_TIPO
    (DESCRICAO, SIGLA)
VALUES
    ('CMC', 'CMC')
GO
INSERT INTO DBA.AGRUPAMENTO_CUSTO
    (DESCRICAO, TIPOAGRUPAMENTO)
VALUES
    ('Agrupamento CMC', 1)
/*GO
INSERT INTO DBA.AGRUPAMENTO_CUSTO_EMPRESA
    (IDEMPRESA, IDAGRUPAMENTOCUSTO)
VALUES
    (1, 1),
    (2, 1),
    (3, 1),
    (4, 1)*/
GO
CREATE OR REPLACE FUNCTION DBA.VALIDA_CTR_CMC
(
    P_IDEMPRESA INTEGER
)
RETURNS CHAR(1)
LANGUAGE SQL
READS SQL DATA
DETERMINISTIC
BEGIN ATOMIC

    IF EXISTS (
        SELECT 1
        FROM DBA.CONFIG_ATRIBUTO_VALORES CAV
        WHERE CAV.IDATRIBUTO = 490
          AND CAV.IDEMPRESA = P_IDEMPRESA
          AND CAV.V_VARCHAR = 'T'
    ) THEN
        RETURN 'T';
    END IF;

    IF EXISTS (
        SELECT 1
        FROM DBA.CONFIG_ENTIDADE CE
        WHERE CE.ENTIDADE = 'CTR'
          AND CE.CHAVE1 = 0
          AND CE.CHAVE2 = 9
          AND CE.DADOS = 'T'
    ) THEN
        RETURN 'T';
    END IF;

    RETURN 'F';

END
GO
CREATE OR REPLACE TRIGGER DBA.TR_ATCMC_FILA_AI BEFORE INSERT ON DBA.MOVIMENTO_CUSTO
REFERENCING NEW AS N
FOR EACH ROW
WHEN ((SELECT DBA.VALIDA_CTR_CMC(N.IDEMPRESA) FROM DBA.DUMMY) = 'T' )
BEGIN

    DECLARE LI_COUNT INTEGER;
    DECLARE LI_SESSIONID INTEGER;

    SET LI_SESSIONID = DBA.UF_GET_ID_CONNECTION();
    SET LI_COUNT = (SELECT COUNT(0) FROM DBA.MOVIMENTO_CUSTO MC WHERE MC.IDEMPRESA = N.IDEMPRESA AND MC.IDPRODUTO = N.IDPRODUTO AND MC.IDSUBPRODUTO = N.IDSUBPRODUTO AND MC.DTMOVIMENTO > N.DTMOVIMENTO);

    IF N.ORIGEMMOVIMENTO IN ('NFE', 'PRD', 'TRC') OR (N.ORIGEMMOVIMENTO IN ('SIP') AND COALESCE((SELECT COUNT(0) FROM DESAGREGACAO_MOVIMENTO_NOTAS WHERE IDEMPRESA = N.IDEMPRESA AND IDPLANILHA = N.IDPLANILHA),0) > 0) THEN
        SET N.VALCUSTOMEDIOCOMPRA = 0.00, QTDESTOQUECOMPRA = 0.00;
        END IF;

    IF /*LI_COUNT > 0 AND*/ (SELECT COUNT(0) FROM DBA.CUSTO_MEDIO_COMPRA_CTRLTRIGGER WHERE IDSESSIONPROC = LI_SESSIONID) = 0 AND N.ORIGEMMOVIMENTO NOT IN ('TRC', 'MCC') THEN
        INSERT INTO DBA.CUSTO_MEDIO_COMPRA_PROCESSAMENTO (IDEMPRESA, IDPLANILHA, IDPRODUTO, IDSUBPRODUTO, NUMSEQUENCIA, DTMOVIMENTO, CMCATUAL, STATUS)
        VALUES (N.IDEMPRESA, N.IDPLANILHA, N.IDPRODUTO, N.IDSUBPRODUTO, N.NUMSEQUENCIA, N.DTMOVIMENTO-2 MINUTES, N.VALCUSTOMEDIOCOMPRA, 'P'            );

    END IF;

END
GO
CREATE OR REPLACE TRIGGER DBA.TR_ATCMC_FILA_AU AFTER UPDATE ON DBA.MOVIMENTO_CUSTO
REFERENCING NEW AS N OLD AS O
FOR EACH ROW
WHEN (N.ORIGEMMOVIMENTO NOT IN ('TRC') AND (SELECT DBA.VALIDA_CTR_CMC(N.IDEMPRESA) FROM DBA.DUMMY) = 'T')
BEGIN

    DECLARE LI_COUNT INTEGER;
    DECLARE LD_DTCTRL TIMESTAMP;
    DECLARE LI_SESSIONID INTEGER;

    SET LI_SESSIONID = DBA.UF_GET_ID_CONNECTION();

    IF N.DTMOVIMENTO > O.DTMOVIMENTO THEN
        SET LD_DTCTRL = O.DTMOVIMENTO-2 MINUTES;
    ELSE
        SET LD_DTCTRL = N.DTMOVIMENTO-2 MINUTES;
    END IF;

    SET LI_COUNT = (SELECT COUNT(0) FROM DBA.MOVIMENTO_CUSTO MC WHERE MC.IDEMPRESA = N.IDEMPRESA AND MC.IDPRODUTO = N.IDPRODUTO AND MC.IDSUBPRODUTO = N.IDSUBPRODUTO AND MC.DTMOVIMENTO > N.DTMOVIMENTO);

    IF O.VALCUSTOMEDIOCOMPRA > 0 AND /*LI_COUNT > 0 AND*/ (SELECT COUNT(0) FROM DBA.CUSTO_MEDIO_COMPRA_CTRLTRIGGER WHERE IDSESSIONPROC = LI_SESSIONID) = 0 THEN
        INSERT INTO DBA.CUSTO_MEDIO_COMPRA_PROCESSAMENTO (IDEMPRESA, IDPLANILHA, IDPRODUTO, IDSUBPRODUTO, NUMSEQUENCIA, DTMOVIMENTO, CMCATUAL, STATUS)
        VALUES (N.IDEMPRESA, N.IDPLANILHA, N.IDPRODUTO, N.IDSUBPRODUTO, N.NUMSEQUENCIA, LD_DTCTRL, N.VALCUSTOMEDIOCOMPRA, 'P'            );
    END IF;

END
GO
CREATE OR REPLACE TRIGGER DBA.TR_ATCMC_FILA_AD AFTER DELETE ON DBA.MOVIMENTO_CUSTO
REFERENCING OLD AS O
FOR EACH ROW
WHEN (O.ORIGEMMOVIMENTO NOT IN ('TRC') AND (SELECT DBA.VALIDA_CTR_CMC(O.IDEMPRESA) FROM DBA.DUMMY) = 'T')
BEGIN

    DECLARE LI_SESSIONID, LI_COUNT INTEGER;

    SET LI_SESSIONID = DBA.UF_GET_ID_CONNECTION();
    SET LI_COUNT = (SELECT COUNT(0) FROM DBA.MOVIMENTO_CUSTO MC WHERE MC.IDEMPRESA = O.IDEMPRESA AND MC.IDPRODUTO = O.IDPRODUTO AND MC.IDSUBPRODUTO = O.IDSUBPRODUTO AND MC.DTMOVIMENTO > O.DTMOVIMENTO);

    IF LI_COUNT > 0 AND (SELECT COUNT(0) FROM DBA.CUSTO_MEDIO_COMPRA_CTRLTRIGGER WHERE IDSESSIONPROC = LI_SESSIONID) = 0 THEN
        INSERT INTO DBA.CUSTO_MEDIO_COMPRA_PROCESSAMENTO (IDEMPRESA, IDPLANILHA, IDPRODUTO, IDSUBPRODUTO, NUMSEQUENCIA, DTMOVIMENTO, CMCATUAL, STATUS)
        VALUES (O.IDEMPRESA, O.IDPLANILHA, O.IDPRODUTO, O.IDSUBPRODUTO, O.NUMSEQUENCIA, O.DTMOVIMENTO-2 MINUTES, O.VALCUSTOMEDIOCOMPRA, 'P'            );
    END IF;

    IF LI_COUNT = 0 AND (SELECT COUNT(0) FROM DBA.CUSTO_MEDIO_COMPRA_PROCESSAMENTO WHERE IDEMPRESA = O.IDEMPRESA AND IDPLANILHA = O.IDPLANILHA AND IDPRODUTO = O.IDPRODUTO AND IDSUBPRODUTO = O.IDSUBPRODUTO AND NUMSEQUENCIA = O.NUMSEQUENCIA AND STATUS = 'P') > 0 THEN
        DELETE FROM DBA.CUSTO_MEDIO_COMPRA_PROCESSAMENTO WHERE IDEMPRESA = O.IDEMPRESA AND IDPLANILHA = O.IDPLANILHA AND IDPRODUTO = O.IDPRODUTO AND IDSUBPRODUTO = O.IDSUBPRODUTO AND NUMSEQUENCIA = O.NUMSEQUENCIA;
    END IF;

END
GO
CREATE OR REPLACE FUNCTION DBA.UF_SALDOEST_DTPOSICAO_CMC(
   AI_IDPRODUTO INTEGER,
   AI_IDSUBPRODUTO INTEGER,
   AI_DTPOSICAO DATE,
   AI_IDEMPRESA INTEGER
)
RETURNS TABLE (
    IDPRODUTO INTEGER,
    IDSUBPRODUTO INTEGER,
    QTDATUALESTOQUE NUMERIC(15,6)
)
LANGUAGE SQL
RETURN
   WITH EMPRESAS_AGRUPAMENTO AS (
      SELECT
         ACE_GRUPO.IDEMPRESA
      FROM
         DBA.AGRUPAMENTO_CUSTO_EMPRESA ACE_PARAM
      JOIN
         DBA.AGRUPAMENTO_CUSTO AC ON
            AC.IDAGRUPAMENTOCUSTO = ACE_PARAM.IDAGRUPAMENTOCUSTO
      JOIN
         DBA.AGRUPAMENTO_CUSTO_TIPO ACT ON
            ACT.IDAGRUPAMENTOTIPO = AC.TIPOAGRUPAMENTO
      JOIN
         DBA.AGRUPAMENTO_CUSTO_EMPRESA ACE_GRUPO ON
            ACE_GRUPO.IDAGRUPAMENTOCUSTO = ACE_PARAM.IDAGRUPAMENTOCUSTO
      WHERE
         ACE_PARAM.IDEMPRESA = AI_IDEMPRESA AND
         ACT.SIGLA = 'CMC'
      UNION ALL
      SELECT
         AI_IDEMPRESA
      FROM
         SYSIBM.SYSDUMMY1
      WHERE
         NOT EXISTS (
            SELECT
               1
            FROM
               DBA.AGRUPAMENTO_CUSTO_EMPRESA ACE_PARAM
            JOIN
               DBA.AGRUPAMENTO_CUSTO AC ON
                  AC.IDAGRUPAMENTOCUSTO = ACE_PARAM.IDAGRUPAMENTOCUSTO
            JOIN
               DBA.AGRUPAMENTO_CUSTO_TIPO ACT ON
                  ACT.IDAGRUPAMENTOTIPO = AC.TIPOAGRUPAMENTO
            JOIN
               DBA.AGRUPAMENTO_CUSTO_EMPRESA ACE_GRUPO ON
                  ACE_GRUPO.IDAGRUPAMENTOCUSTO = ACE_PARAM.IDAGRUPAMENTOCUSTO
            WHERE
               ACE_PARAM.IDEMPRESA = AI_IDEMPRESA AND
               ACT.SIGLA = 'CMC'
         )
   )
   SELECT
      IDPRODUTO,
      IDSUBPRODUTO,
      SUM(QTDATUALESTOQUE) AS QTDATUALESTOQUE
   FROM (
         SELECT
            ES.IDPRODUTO,
            ES.IDSUBPRODUTO,
            ES.IDEMPRESA,
            ES.IDLOCALESTOQUE,
            ES.QTDATUALESTOQUE,
            ES.DTMOVIMENTO,
            ROW_NUMBER() OVER (PARTITION BY ES.IDPRODUTO, ES.IDSUBPRODUTO, ES.IDLOCALESTOQUE, ES.IDEMPRESA ORDER BY ES.DTMOVIMENTO DESC) LINHA
         FROM
            DBA.ESTOQUE_SINTETICO ES
         JOIN
            EMPRESAS_AGRUPAMENTO EA ON
               EA.IDEMPRESA = ES.IDEMPRESA
         JOIN
            DBA.ESTOQUE_CADASTRO_LOCAL ECL ON
               ECL.IDLOCALESTOQUE = ES.IDLOCALESTOQUE AND
               ECL.FLAGDISPONVENDA = 'T'
         WHERE
            ES.IDPRODUTO = AI_IDPRODUTO AND
            ES.IDSUBPRODUTO = AI_IDSUBPRODUTO AND
            ES.DTMOVIMENTO <= AI_DTPOSICAO
         ORDER BY DTMOVIMENTO DESC)
   WHERE
      LINHA = 1
   GROUP BY
      IDPRODUTO,
      IDSUBPRODUTO
GO
CREATE OR REPLACE FUNCTION DBA.UF_TPOPERACAO_CMC(
   AI_IDEMPRESA INTEGER,
   AI_IDPLANILHA INTEGER,
   AI_IDPRODUTO INTEGER,
   AI_IDSUBPRODUTO INTEGER,
   AI_NUMSEQUENCIA INTEGER
)
RETURNS TABLE (
    BONIFICA CHAR(1)
)
LANGUAGE SQL
RETURN
    SELECT
        CASE WHEN CF.IDTIPOOPERACAO IN (28,164) THEN 'T' ELSE 'F' END AS BONIFICACAO
    FROM
        DBA.ESTOQUE_ANALITICO EA
    JOIN
        DBA.OPERACAO_INTERNA OP ON
            OP.IDOPERACAO = EA.IDOPERACAO
    JOIN
        DBA.CENARIO_FISCAL CF ON
            CF.IDCENARIOFISCAL = EA.IDCENARIOFISCAL
    JOIN
        DBA.TIPO_OPERACAO TP ON
            TP.IDTIPOOPERACAO = CF.IDTIPOOPERACAO
    WHERE
        EA.IDEMPRESA = AI_IDEMPRESA AND
        EA.IDPLANILHA = AI_IDPLANILHA AND
        EA.IDPRODUTO = AI_IDPRODUTO AND
        EA.IDSUBPRODUTO = AI_IDSUBPRODUTO AND
        EA.NUMSEQUENCIA = AI_NUMSEQUENCIA
GO
CREATE OR REPLACE FUNCTION DBA.UF_CALCULADORA_CMC(
    IN_IDEMPRESA        INTEGER,
    IN_IDPLANILHA       INTEGER,
    IN_IDPRODUTO        INTEGER,
    IN_IDSUBPRODUTO     INTEGER,
    IN_NUMSEQUENCIA     INTEGER,
    IN_DTMOVIMENTO      TIMESTAMP
)
RETURNS TABLE (
    CMCCALCULADO DECIMAL(15,6),
    QTDESTCPCALCULADO DECIMAL(15,6),
    MEMORIA VARCHAR(500)
)
LANGUAGE SQL
READS SQL DATA
DETERMINISTIC
BEGIN ATOMIC

    DECLARE ANT_CUSTOULTCP, ANT_MEDIOCOMPRA, ANTDIA_QUANTIDADEPRO, ATU_CUSTOCOMPRA, ATU_SALDOINIATUAL, ATU_SALDOINIATUAL_HIST, ATU_QTDPRODREGATUAL, LD_CMCCALCULADO, LD_QTDESTCPCALCULADO DECIMAL(15,6);
    DECLARE LS_MEMORIA VARCHAR(500);
    DECLARE LI_DAYS INTEGER DEFAULT 1;
    DECLARE LS_TPMOV VARCHAR(50);

    SET (ANT_CUSTOULTCP, ANT_MEDIOCOMPRA, ANTDIA_QUANTIDADEPRO, ATU_CUSTOCOMPRA, ATU_SALDOINIATUAL, ATU_QTDPRODREGATUAL, LS_TPMOV) =
        (SELECT
            COALESCE(ANTERIOR.CUSTOULTCP, 0)            AS ANTCUSTOULTCP,
            COALESCE(ANTERIOR.MEDIOCOMPRA, 0)           AS ANTMEDIOCOMPRA,
            COALESCE(ANTERIORDIA.QTDPRODANT,0)          AS ANTDIAQUANTIDADEPRO,
            COALESCE(CUSTOESTATUAL.CUSTOCPATUAL,0)      AS ATUCUSTOCOMPRA,
            COALESCE(CUSTOESTATUAL.SALDOINICIALATUAL,0) AS ATUSALDOINICIAL,
            COALESCE(CUSTOESTATUAL.QTDPRODREGATUAL,0)   AS QTDPRODREGATUAL,
            '' AS TPMOV
        FROM
            DBA.DUMMY
        LEFT JOIN (
            SELECT
                COALESCE(TEMP.CUSTOULTIMACOMPRA, 0)     AS CUSTOULTCP,
                COALESCE(TEMP.VALCUSTOMEDIOCOMPRA, 0)   AS MEDIOCOMPRA
            FROM (
                SELECT
                    MC.IDEMPRESA,
                    MC.IDPRODUTO,
                    MC.IDSUBPRODUTO,
                    MC.DTMOVIMENTO,
                    CASE WHEN PC.CUSTOULTIMACOMPRA IS NULL THEN MC.VALCUSTOMEDIOCOMPRA ELSE PC.CUSTOULTIMACOMPRA END AS CUSTOULTIMACOMPRA,
                    MC.VALCUSTOMEDIOCOMPRA,
                    ROW_NUMBER() OVER (
                        PARTITION BY MC.IDEMPRESA, MC.IDPRODUTO, MC.IDSUBPRODUTO
                        ORDER BY MC.DTMOVIMENTO DESC
                    ) AS LINHA
                FROM
                    DBA.MOVIMENTO_CUSTO  MC
                LEFT JOIN
                     DBA.PRODUTO_CUSTO AS PC ON
                        PC.IDEMPRESA = MC.IDEMPRESA AND
                        PC.IDPLANILHA = MC.IDPLANILHA AND
                        PC.IDPRODUTO = MC.IDPRODUTO AND
                        PC.IDSUBPRODUTO = MC.IDSUBPRODUTO AND
                        PC.NUMSEQUENCIA = MC.NUMSEQUENCIA
                WHERE
                    MC.IDEMPRESA        = IN_IDEMPRESA AND
                    MC.IDPRODUTO        = IN_IDPRODUTO AND
                    MC.IDSUBPRODUTO     = IN_IDSUBPRODUTO AND
                    MC.DTMOVIMENTO      < IN_DTMOVIMENTO AND
                    (MC.FLAGALTEROUCUSTO = 'T') AND
                    (MC.ORIGEMMOVIMENTO IN ('NFE', 'PRD', 'TRC') OR
                    (MC.ORIGEMMOVIMENTO IN ('SIP') AND
                    EXISTS (
                        SELECT
                            0
                        FROM
                            DBA.DESAGREGACAO_MOVIMENTO_NOTAS
                        WHERE
                            IDEMPRESA = MC.IDEMPRESA AND
                            IDPLANILHA = MC.IDPLANILHA
                        )
                    ))
            ) TEMP
            WHERE
                LINHA = 1
        ) AS ANTERIOR ON
            0 = 0
        LEFT JOIN (
            SELECT
                COALESCE(SUM(QTDPRODUTO),0) AS QTDPRODANT
            FROM
                DBA.MOVIMENTO_CUSTO MC2
            WHERE
                MC2.IDEMPRESA           = IN_IDEMPRESA AND
                MC2.IDPRODUTO           = IN_IDPRODUTO AND
                MC2.IDSUBPRODUTO        = IN_IDSUBPRODUTO AND
                MC2.DTMOVIMENTO         > DBA.DTINI(IN_DTMOVIMENTO) AND
                MC2.DTMOVIMENTO         < IN_DTMOVIMENTO AND
                (MC2.FLAGALTEROUCUSTO    = 'T') AND
                (MC2.ORIGEMMOVIMENTO     IN ('NFE', 'PRD', 'TRC') OR
                (MC2.ORIGEMMOVIMENTO IN ('SIP') AND
                    EXISTS (
                        SELECT
                            0
                        FROM
                            DBA.DESAGREGACAO_MOVIMENTO_NOTAS
                        WHERE
                            IDEMPRESA = MC2.IDEMPRESA AND
                            IDPLANILHA = MC2.IDPLANILHA
                        )
                    )
                )
        ) ANTERIORDIA (QTDPRODANT) ON
            0 = 0
        LEFT JOIN (
            SELECT
                CASE WHEN TPOPER.BONIFICA = 'T' THEN 0.00 ELSE COALESCE(MC3.CUSTOULTIMACOMPRA,0) END AS CUSTOCPATUAL,
                (COALESCE(SLDEST.QTDATUALESTOQUE,0) - CASE WHEN LI_DAYS = 1 THEN 0 ELSE COALESCE(MCUSTO.QTDPRODUTO,0) END) AS SALDOINICIALATUAL,
                COALESCE(MCUSTO.QTDPRODUTO,0) AS QTDPRODREGATUAL
            FROM
                DBA.MOVIMENTO_CUSTO MCUSTO
            LEFT JOIN DBA.PRODUTO_CUSTO MC3 ON
                    MC3.IDEMPRESA = MCUSTO.IDEMPRESA AND
                    MC3.IDPLANILHA = MCUSTO.IDPLANILHA AND
                    MC3.IDPRODUTO = MCUSTO.IDPRODUTO AND
                    MC3.IDSUBPRODUTO = MCUSTO.IDSUBPRODUTO AND
                    MC3.NUMSEQUENCIA = MCUSTO.NUMSEQUENCIA
            LEFT JOIN TABLE (
                DBA.UF_SALDOEST_DTPOSICAO_CMC(MCUSTO.IDPRODUTO, MCUSTO.IDSUBPRODUTO, DATE(MCUSTO.DTMOVIMENTO) - LI_DAYS DAY, MCUSTO.IDEMPRESA)
            ) SLDEST ON
                    SLDEST.IDPRODUTO    = MCUSTO.IDPRODUTO AND
                    SLDEST.IDSUBPRODUTO = MCUSTO.IDSUBPRODUTO
            LEFT JOIN TABLE (
                DBA.UF_TPOPERACAO_CMC (MCUSTO.IDEMPRESA, MCUSTO.IDPLANILHA, MCUSTO.IDPRODUTO, MCUSTO.IDSUBPRODUTO, MCUSTO.NUMSEQUENCIA)
            ) TPOPER ON 0 = 0
            WHERE
                MCUSTO.IDEMPRESA       = IN_IDEMPRESA AND
                MCUSTO.IDPLANILHA      = IN_IDPLANILHA AND
                MCUSTO.IDPRODUTO       = IN_IDPRODUTO AND
                MCUSTO.IDSUBPRODUTO    = IN_IDSUBPRODUTO AND
                MCUSTO.NUMSEQUENCIA    = IN_NUMSEQUENCIA
        ) CUSTOESTATUAL (CUSTOCPATUAL, SALDOINICIALATUAL, QTDPRODREGATUAL) ON
            0 = 0
    );

        SET LS_MEMORIA =        'ANTCMC: '||CAST(ANT_MEDIOCOMPRA AS VARCHAR(20))||'-'||
                                'SLDINI: '||CAST(ATU_SALDOINIATUAL AS VARCHAR(20))||'-'||
                                'QTDDIA: '||CAST(ANTDIA_QUANTIDADEPRO AS VARCHAR(20))||'-'||
                                'CUSCOM: '||CAST(ATU_CUSTOCOMPRA AS VARCHAR(20))||'-'||
                                'QTDREG: '||CAST(ATU_QTDPRODREGATUAL AS VARCHAR(20))||'-'||
                                LS_TPMOV;

    SET ATU_SALDOINIATUAL_HIST = ATU_SALDOINIATUAL;

    IF ATU_SALDOINIATUAL < 0 THEN
        SET ATU_SALDOINIATUAL = 0;
    END IF;


    IF ANT_MEDIOCOMPRA <= 0 THEN
        IF COALESCE(ATU_SALDOINIATUAL_HIST,0)+COALESCE(ANTDIA_QUANTIDADEPRO,0) > 0 THEN
            SET LD_CMCCALCULADO = (
                (COALESCE(ATU_CUSTOCOMPRA,0)*COALESCE((COALESCE(ATU_SALDOINIATUAL_HIST,0)+COALESCE(ANTDIA_QUANTIDADEPRO,0) ),0))
                + (COALESCE(ATU_CUSTOCOMPRA,0)*COALESCE(ATU_QTDPRODREGATUAL,0))
                ) / (
                COALESCE((COALESCE(ATU_SALDOINIATUAL_HIST,0)+COALESCE(ANTDIA_QUANTIDADEPRO,0)),0)
                + COALESCE(ATU_QTDPRODREGATUAL,0)
                );
        ELSE
            SET LD_CMCCALCULADO = COALESCE(ATU_CUSTOCOMPRA, 0);
        END IF;
    ELSE
        IF COALESCE(ATU_SALDOINIATUAL_HIST,0)+COALESCE(ANTDIA_QUANTIDADEPRO,0) > 0 THEN
            SET LD_CMCCALCULADO = (
                (COALESCE(ANT_MEDIOCOMPRA,0)*COALESCE((COALESCE(ATU_SALDOINIATUAL_HIST,0)+COALESCE(ANTDIA_QUANTIDADEPRO,0)),0))
                + (COALESCE(ATU_CUSTOCOMPRA,0)*COALESCE(ATU_QTDPRODREGATUAL,0))
                ) / (
                COALESCE((
                COALESCE(ATU_SALDOINIATUAL_HIST,0)+COALESCE(ANTDIA_QUANTIDADEPRO,0)),0)
                + COALESCE(ATU_QTDPRODREGATUAL,0)
                );
        ELSE
            SET LD_CMCCALCULADO = COALESCE(ATU_CUSTOCOMPRA, 0);
        END IF;
    END IF;

    SET LS_MEMORIA = LS_MEMORIA || ' - LD_CMCCALCULADO:' || CAST(LD_CMCCALCULADO AS VARCHAR(20));
    SET LD_QTDESTCPCALCULADO = COALESCE(ATU_SALDOINIATUAL_HIST,0)+CASE WHEN LI_DAYS = 0 THEN 0.00 ELSE COALESCE(ANTDIA_QUANTIDADEPRO,0) END;

    RETURN (VALUES(LD_CMCCALCULADO, LD_QTDESTCPCALCULADO, LS_MEMORIA));

END
GO
CREATE OR REPLACE PROCEDURE DBA.SP_PROCESSA_CUSTO_MEDIO_COMPRA_CMC()
LANGUAGE SQL
MODIFIES SQL DATA
BEGIN

    DECLARE LS_COMMIT CHAR(6) DEFAULT 'COMMIT';
    DECLARE LD_CMCCALCULADO, LD_QTDESTCPCALCULADO DECIMAL(15,6);
    DECLARE LS_MEMORIACALC VARCHAR(600);
    DECLARE LI_SESSIONID INTEGER;

    SET LI_SESSIONID = ( SELECT
                            AGENT_ID
                        FROM
                            SYSIBMADM.APPLICATIONS
                        WHERE
                            APPL_ID = DBA.UF_APPLICATION_ID());

    INSERT INTO DBA.CUSTO_MEDIO_COMPRA_CTRLTRIGGER (IDSESSIONPROC) VALUES (LI_SESSIONID);

    -- Loop da fila
    FOR ROW_FILA AS CURSOR_FILA CURSOR WITH HOLD FOR
        SELECT
            IDMOVIMENTO     AS I_IDMOV,
            IDEMPRESA       AS I_EMP,
            IDPLANILHA      AS I_PLA,
            IDPRODUTO       AS I_PRO,
            IDSUBPRODUTO    AS I_SUB,
            NUMSEQUENCIA    AS I_SEQ,
            DTMOVIMENTO     AS I_DTM,
            CMCATUAL        AS I_CMC
        FROM
            DBA.CUSTO_MEDIO_COMPRA_PROCESSAMENTO
        WHERE
            STATUS = 'P'
        ORDER BY
            DTINCLUSAO
    DO

        -- Loop dos movimentos posteriores
        FOR ROW_MOV AS CURSOR_MOV CURSOR WITH HOLD FOR
            WITH EMPRESAS_AGRUPAMENTO AS (
                SELECT DISTINCT
                    ACE_GRUPO.IDEMPRESA
                FROM
                    DBA.AGRUPAMENTO_CUSTO_EMPRESA ACE_PARAM
                JOIN
                    DBA.AGRUPAMENTO_CUSTO AC ON
                        AC.IDAGRUPAMENTOCUSTO = ACE_PARAM.IDAGRUPAMENTOCUSTO
                JOIN
                    DBA.AGRUPAMENTO_CUSTO_TIPO ACT ON
                        ACT.IDAGRUPAMENTOTIPO = AC.TIPOAGRUPAMENTO
                JOIN
                    DBA.AGRUPAMENTO_CUSTO_EMPRESA ACE_GRUPO ON
                        ACE_GRUPO.IDAGRUPAMENTOCUSTO = ACE_PARAM.IDAGRUPAMENTOCUSTO
                WHERE
                    ACE_PARAM.IDEMPRESA = ROW_FILA.I_EMP AND
                    ACT.SIGLA = 'CMC'
                UNION ALL
                SELECT
                    ROW_FILA.I_EMP
                FROM
                    SYSIBM.SYSDUMMY1
                WHERE
                    NOT EXISTS (
                        SELECT
                            1
                        FROM
                            DBA.AGRUPAMENTO_CUSTO_EMPRESA ACE_PARAM
                        JOIN
                            DBA.AGRUPAMENTO_CUSTO AC ON
                                AC.IDAGRUPAMENTOCUSTO = ACE_PARAM.IDAGRUPAMENTOCUSTO
                        JOIN
                            DBA.AGRUPAMENTO_CUSTO_TIPO ACT ON
                                ACT.IDAGRUPAMENTOTIPO = AC.TIPOAGRUPAMENTO
                        JOIN
                            DBA.AGRUPAMENTO_CUSTO_EMPRESA ACE_GRUPO ON
                                ACE_GRUPO.IDAGRUPAMENTOCUSTO = ACE_PARAM.IDAGRUPAMENTOCUSTO
                        WHERE
                            ACE_PARAM.IDEMPRESA = ROW_FILA.I_EMP AND
                            ACT.SIGLA = 'CMC'
                    )
            )
            SELECT
                MC.IDEMPRESA             AS I_IDEMPRESA,
                MC.IDPLANILHA            AS I_IDPLANILHA,
                MC.IDPRODUTO             AS I_IDPRODUTO,
                MC.IDSUBPRODUTO          AS I_IDSUBPRODUTO,
                MC.NUMSEQUENCIA          AS I_NUMSEQUENCIA,
                MC.DTMOVIMENTO           AS I_DTMOVIMENTO,
                MC.VALCUSTOMEDIOCOMPRA   AS I_CMCOLD,
                MC.QTDESTOQUECOMPRA      AS I_QTDOLD
            FROM
                DBA.MOVIMENTO_CUSTO MC
            JOIN
                EMPRESAS_AGRUPAMENTO EA ON
                    EA.IDEMPRESA = MC.IDEMPRESA
            WHERE
                MC.IDPRODUTO        = ROW_FILA.I_PRO AND
                MC.IDSUBPRODUTO     = ROW_FILA.I_SUB AND
                MC.DTMOVIMENTO      >= ROW_FILA.I_DTM AND
                MC.FLAGALTEROUCUSTO = 'T'  AND
                (MC.ORIGEMMOVIMENTO  IN ('NFE', 'PRD') OR
                (MC.ORIGEMMOVIMENTO IN ('SIP') AND
                EXISTS (
                    SELECT
                        0
                    FROM
                        DBA.DESAGREGACAO_MOVIMENTO_NOTAS
                    WHERE
                        IDEMPRESA = MC.IDEMPRESA AND
                        IDPLANILHA = MC.IDPLANILHA
                    )
                ))
            ORDER BY
                MC.DTMOVIMENTO,
                MC.NUMSEQUENCIA
        DO
            SET (LD_CMCCALCULADO, LD_QTDESTCPCALCULADO, LS_MEMORIACALC) = (SELECT CMCCALCULADO, QTDESTCPCALCULADO, MEMORIA FROM TABLE (DBA.UF_CALCULADORA_CMC ( ROW_MOV.I_IDEMPRESA, ROW_MOV.I_IDPLANILHA, ROW_MOV.I_IDPRODUTO, ROW_MOV.I_IDSUBPRODUTO, ROW_MOV.I_NUMSEQUENCIA, ROW_MOV.I_DTMOVIMENTO)));

            UPDATE
                DBA.MOVIMENTO_CUSTO
            SET
                VALCUSTOMEDIOCOMPRA = COALESCE(LD_CMCCALCULADO,0),
                QTDESTOQUECOMPRA    = COALESCE(LD_QTDESTCPCALCULADO,0)
            WHERE
                IDEMPRESA    = ROW_MOV.I_IDEMPRESA AND
                IDPLANILHA   = ROW_MOV.I_IDPLANILHA AND
                IDPRODUTO    = ROW_MOV.I_IDPRODUTO AND
                IDSUBPRODUTO = ROW_MOV.I_IDSUBPRODUTO AND
                NUMSEQUENCIA = ROW_MOV.I_NUMSEQUENCIA;

            UPDATE
                DBA.MOVIMENTO_CUSTO
            SET
                VALCUSTOMEDIOCOMPRA = COALESCE(LD_CMCCALCULADO,0),
                QTDESTOQUECOMPRA    = COALESCE(LD_QTDESTCPCALCULADO,0)
            WHERE
                ORIGEMMOVIMENTO = 'MCC' AND
                IDEMPRESA    = ROW_MOV.I_IDEMPRESA AND
                IDPLANILHA   = ROW_MOV.I_IDPLANILHA AND
                NUMSEQUENCIA = ROW_MOV.I_NUMSEQUENCIA;

            /*TRC*/
            UPDATE
                DBA.MOVIMENTO_CUSTO MC
            SET
                VALCUSTOMEDIOCOMPRA = COALESCE(LD_CMCCALCULADO,0),
                QTDESTOQUECOMPRA    = COALESCE(LD_QTDESTCPCALCULADO,0)
            WHERE
                ORIGEMMOVIMENTO = 'TRC' AND
                IDPRODUTO    = ROW_MOV.I_IDPRODUTO AND
                IDSUBPRODUTO = ROW_MOV.I_IDSUBPRODUTO AND
                NUMSEQUENCIA = ROW_MOV.I_NUMSEQUENCIA AND
                EXISTS (
                            SELECT
                                                0
                                        FROM
                                                DBA.NOTAS NF
                                        WHERE
                                                NF.NUMNOTA = ROW_MOV.I_IDPLANILHA AND
                                                NF.IDPLANILHA = MC.IDPLANILHA
                                        );
            /*TRC*/

            INSERT INTO DBA.CUSTO_MEDIO_COMPRA_PROCHIST (IDEMPRESA, IDPLANILHA, IDPRODUTO, IDSUBPRODUTO, NUMSEQUENCIA, DTMOVIMENTO, CMCOLD, CMCNEW, QTDOLD, QTDNEW, DTALTERACAO, IDPLANILHAORI)
            VALUES (ROW_MOV.I_IDEMPRESA, ROW_MOV.I_IDPLANILHA, ROW_MOV.I_IDPRODUTO, ROW_MOV.I_IDSUBPRODUTO, ROW_MOV.I_NUMSEQUENCIA, ROW_MOV.I_DTMOVIMENTO, ROW_MOV.I_CMCOLD, LD_CMCCALCULADO, ROW_MOV.I_QTDOLD, LD_QTDESTCPCALCULADO, SYSDATE, ROW_FILA.I_PLA);

            EXECUTE IMMEDIATE LS_COMMIT;

        END FOR;

        UPDATE
            DBA.CUSTO_MEDIO_COMPRA_PROCESSAMENTO
        SET
            STATUS = 'C'
        WHERE
            IDMOVIMENTO = I_IDMOV;

        EXECUTE IMMEDIATE LS_COMMIT;

    END FOR;

    DELETE FROM DBA.CUSTO_MEDIO_COMPRA_CTRLTRIGGER WHERE IDSESSIONPROC = LI_SESSIONID;

END
