erDiagram
    EMPRESA ||--o{ AGRUPAMENTO_CUSTO_EMPRESA : "participa"
    AGRUPAMENTO_CUSTO_TIPO ||--o{ AGRUPAMENTO_CUSTO : "classifica"
    AGRUPAMENTO_CUSTO ||--o{ AGRUPAMENTO_CUSTO_EMPRESA : "agrupa empresas"

    EMPRESA {
        INTEGER IDEMPRESA PK
    }

    AGRUPAMENTO_CUSTO_TIPO {
        INTEGER IDAGRUPAMENTOTIPO PK
        VARCHAR_50 DESCRICAO
        VARCHAR_10 SIGLA UK
    }

    AGRUPAMENTO_CUSTO {
        INTEGER IDAGRUPAMENTOCUSTO PK
        VARCHAR_100 DESCRICAO
        INTEGER TIPOAGRUPAMENTO FK
    }

    AGRUPAMENTO_CUSTO_EMPRESA {
        INTEGER IDAGRUPAMENTOCUSTOEMPRESA PK
        INTEGER IDEMPRESA FK_UK
        INTEGER IDAGRUPAMENTOCUSTO FK_UK
    }
